Added Custom CSS Framework

--- a/PlannedWaterfall/PlannedWaterfall/PlannedWaterfall.csproj
+++ b/PlannedWaterfall/PlannedWaterfall/PlannedWaterfall.csproj
@@ -210,6 +210,9 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\style.css">
+      <DependentUpon>style.scss</DependentUpon>
+    </Content>
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -219,6 +222,22 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\scssFiles\_basicLayout.scss" />
+    <Content Include="Content\scssFiles\_colors.scss" />
+    <Content Include="Content\scssFiles\_customSettings.scss" />
+    <Content Include="Content\scssFiles\_darkAndLight.scss" />
+    <Content Include="Content\scssFiles\_flexContainer.scss" />
+    <Content Include="Content\scssFiles\_headAndFoot.scss" />
+    <Content Include="Content\scssFiles\_headings.scss" />
+    <Content Include="Content\scssFiles\_image.scss" />
+    <Content Include="Content\scssFiles\_links.scss" />
+    <Content Include="Content\scssFiles\_modals.scss" />
+    <Content Include="Content\scssFiles\_radius.scss" />
+    <Content Include="Content\scssFiles\_round.scss" />
+    <Content Include="Content\scssFiles\_slideShow.scss" />
+    <Content Include="Content\scssFiles\_squareLayout.scss" />
+    <Content Include="Content\scssFiles\_transitions.scss" />
+    <Content Include="Content\style.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
